k8s/jenkins/keda-interceptor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-keda-proxy
  namespace: jenkins
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
